# app/server/openshift/src/main/java/io/syndesis/server/openshift/DeploymentData.java
@@ -19,8 +19,10 @@ package io.syndesis.server.openshift;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import io.fabric8.kubernetes.api.model.EnvVar;
 
@@ -37,6 +39,8 @@ public final class DeploymentData {
     private EnumSet<Exposure> exposure = EnumSet.noneOf(Exposure.class);
 
     private final List<EnvVar> environment = new ArrayList<>();
+
+    private final Set<String> removedEnvironment = new HashSet<>();
 
     public Map<String, String> getAnnotations() {
         return annotations;
@@ -129,9 +133,18 @@ public final class DeploymentData {
             that.environment.add(new EnvVar(name, value, null));
             return this;
         }
+
+        public DeploymentData.Builder removeEnvironmentVariable(final String name) {
+            that.removedEnvironment.add(name);
+            return this;
+        }
     }
 
     public List<EnvVar> getEnvironment() {
         return environment;
+    }
+
+    public Set<String> getRemovedEnvironment() {
+        return removedEnvironment;
     }
 }
